--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "laravelcollective/html": "5.1.*",
-        "stripe/stripe-php": "3.*"
+        "stripe/stripe-php": "3.*",
+        "thetispro/laravel5-setting": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
